entrega dos exercicios

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ logs
 .npm
 .vscode
 node_modules
+old
+tempCodeRunnerFile.js
+package-lock.json
+example.gif
+projeto.md 
+README.md
+db.js
+index.js
+revisao.js
